Fill readme with parameters